clusters/homelab/apps/webplayer/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: webplayer
  namespace: webplayer
spec:
  selector:
    app: webplayer
  ports:
    - port: 80
      targetPort: 5173
